styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
  font-family: "system-ui", sans-serif;
  color: #222;
  font-weight: 200;
  height: 100%;
}

body {
  @apply bg-white dark:bg-specialBlue;
}

p, h1, h2, h3, h4 {
  @apply dark:text-white;
}

#__next {
  height: 100%;
}

a {
  @apply font-medium text-yellow-600 cursor-pointer rounded-sm transition-colors duration-500 ease-in-out px-1 no-underline;
}

a:active,
a:hover {
  @apply text-specialBlue bg-yellow-200;
}

.link {
  @apply underline;
}

.notion-list {
  list-style: none;
  margin: 0;
  padding: 0;
}

.notion-list li {
  margin: 0;
  padding: 0;
}

.notion-list ul {
  margin: 0;
  padding: 0;
}

.notion-text {
  @apply font-normal;
}

.notion-quote {
  @apply dark:text-white;
}

.notion-inline-code {
  @apply dark:text-white dark:bg-yellow-500;
}

